# freemails

./: README.md  freemails.py  pyproject.toml
