[project]
name = "freemails"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CeCILL-B"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]

dependencies = []


[project.urls]
repository = "https://github.com/sapetnioc/freemails"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
freemails = "freemails:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
freemails = { path = ".", editable = true }
